* Added: Text color option for course certificate.
* Added: Categories argument to [course_list] shortcode to filter courses.
* Added: HTML rel attribute to next and previous buttons.
* Added: Password strength meter on student profile
* Added: The ability to disable the strength meter in the enrollment pup-up.
* Added: Option to disable emails individually

* Improved: Add individuall nonce when withdraw a student from a course.
* Improved: Students list on assessment screen can be sorted by username and display name.
* Improved: Students list on assessment screen is more like users list.
* Improved: Students list on course edit screen can by sorted by: username, display name, first name and last name.
* Improved: Students list on course edit screen is more like users list.
* Improved: Added certificate filter on students list on course edit screen.
* Improved: Inrease a course assessments page load time.
* Improved: Image display.
* Improved: Removed unused function CoursePress_Data_Course::is_course_preview()

* Fixed: Default unit title height to avoid collapse when empty.
* Fixed: Instructor profile course lists on multisite.
* Fixed: Empty dashboard page to non-enrolled user.
* Fixed: A minor microdata issue on the course details page.

= 2.0.7 =
-------------------------------------------------
* Added: New "Paid" column on course list table.
* Added: Email validation on CoursePress signup form.
* Added: A sample course to fresh CoursePress installation.
* Added: No visible units message info.
* Added: Ability to sort by title for course_list shortcode.
* Added: Instructors notification for new enrolled students.
* Added: Text color option for basic certificate.
* Added: Preview without saving for basic and course certificates.

* Improved: Description on settings page.
* Improved: Compatibility with Avada theme.
* Improved: Disable WooCommerce guest checkout for courses checkout.